==> AntoineMugnier/mutekh/arch/efm32/drivers/gpio/gpio.c <==
#include <hexo/types.h>
#include <hexo/endian.h>
#include <hexo/iospace.h>
#include <hexo/bit.h>
#include <mutek/mem_alloc.h>
#include <mutek/printk.h>
#include <arch/efm32/gpio.h>
#include <arch/efm32/devaddr.h>
#include <device/resources.h>
#include <device/device.h>
#include <device/irq.h>
#include <device/class/gpio.h>
#include <device/class/iomux.h>
#include <device/class/icu.h>
#include <device/clock.h>
#include <string.h>
#define GPIO_SRC_IRQ_COUNT 2
#define GPIO_BANK_SIZE 16
# define GPIO_PINIDX_COUNT 1
# define GPIO_PINGRP_COUNT 16
# define GPIO_BANK_COUNT 6
# define GPIO_PINIDX_COUNT 4
# define GPIO_PINGRP_COUNT 4
# define GPIO_BANK_COUNT 12

static error_t efm32_gpio_mode(gpio_id_t io_first, gpio_id_t io_last,
                               const uint8_t *mask, enum dev_pin_driving_e mode)
{
  uint32_t mde;

  switch (mode)
    {
    case DEV_PIN_DISABLED:
      mde = EFM32_GPIO_MODEL_MODE_DISABLED;
      break;
    case DEV_PIN_PUSHPULL:
#if (CONFIG_EFM32_ARCHREV == EFM32_ARCHREV_EFR_XG1) ||\
    (CONFIG_EFM32_ARCHREV == EFM32_ARCHREV_EFR_XG12) ||\
    (CONFIG_EFM32_ARCHREV == EFM32_ARCHREV_EFR_XG14)
      mde = EFM32_GPIO_MODEL_MODE_PUSHPULL;
#else
      mde = EFM32_GPIO_MODEL_MODE_PUSHPULLDRIVE;
#endif
      break;
    case DEV_PIN_INPUT:
      mde = EFM32_GPIO_MODEL_MODE_INPUT;
      break;
    case DEV_PIN_INPUT_PULLUP:
    case DEV_PIN_INPUT_PULLDOWN:
    case DEV_PIN_INPUT_PULL:
      mde = EFM32_GPIO_MODEL_MODE_INPUTPULL;
      break;
    case DEV_PIN_OPENDRAIN:
#if (CONFIG_EFM32_ARCHREV == EFM32_ARCHREV_EFR_XG1) ||\
    (CONFIG_EFM32_ARCHREV == EFM32_ARCHREV_EFR_XG12) ||\
    (CONFIG_EFM32_ARCHREV == EFM32_ARCHREV_EFR_XG14)
      mde = EFM32_GPIO_MODEL_MODE_WIREDAND;
#else
      mde = EFM32_GPIO_MODEL_MODE_WIREDANDDRIVE;
#endif
      break;
    case DEV_PIN_OPENSOURCE:
      mde = EFM32_GPIO_MODEL_MODE_WIREDOR;
      break;
    case DEV_PIN_OPENDRAIN_PULLUP:
      mde = EFM32_GPIO_MODEL_MODE_WIREDANDPULLUP;
      break;
    case DEV_PIN_OPENSOURCE_PULLDOWN:
      mde = EFM32_GPIO_MODEL_MODE_WIREDORPULLDOWN;
      break;
    default:
      return -ENOTSUP;
    }

  efm32_gpio_mode_reg(io_first, io_last, mask, mde * 0x11111111);

  if (mode & DEV_PIN_RESISTOR_UP_)
    efm32_gpio_out_reg(io_first, io_last, mask, dev_gpio_mask1);
  else if (mode & DEV_PIN_RESISTOR_DOWN_)
    {
      uint8_t m[8];
      endian_64_na_store(m, ~endian_64_na_load(mask));
      efm32_gpio_out_reg(io_first, io_last, dev_gpio_mask0, m);
    }

  return 0;
}

static DEV_GPIO_SET_MODE(efm32_gpio_set_mode)
{
  struct device_s *dev = gpio->dev;

  if (io_last >= GPIO_BANK_SIZE * GPIO_BANK_COUNT)
    return -ERANGE;

  LOCK_SPIN_IRQ(&dev->lock);
  efm32_gpio_mode(io_first, io_last, mask, mode);
  LOCK_RELEASE_IRQ(&dev->lock);

  return 0;
}

static DEV_GPIO_SET_OUTPUT(efm32_gpio_set_output)
{
  struct device_s *dev = gpio->dev;

  if (io_last >= GPIO_BANK_SIZE * GPIO_BANK_COUNT)
    return -ERANGE;

  LOCK_SPIN_IRQ(&dev->lock);
  efm32_gpio_out_reg(io_first, io_last, set_mask, clear_mask);
  LOCK_RELEASE_IRQ(&dev->lock);

  return 0;
}

static DEV_GPIO_GET_INPUT(efm32_gpio_get_input)
{
  struct device_s *dev = gpio->dev;

  if (io_last >= GPIO_BANK_SIZE * GPIO_BANK_COUNT)
    return -ERANGE;

  LOCK_SPIN_IRQ(&dev->lock);

  uint32_t vp, v;
  uint_fast8_t bf = io_first / GPIO_BANK_SIZE;
  uint_fast8_t bl = io_last / GPIO_BANK_SIZE;
  uint_fast8_t shift = io_first % GPIO_BANK_SIZE;

  vp = endian_le32(cpu_mem_read_32(EFM32_GPIO_ADDR + EFM32_GPIO_DIN_ADDR(bf)));
  vp >>= shift;

  while (bf++ < bl)
    {
      v = endian_le32(cpu_mem_read_32(EFM32_GPIO_ADDR + EFM32_GPIO_DIN_ADDR(bf)));
      v = (v << (GPIO_BANK_SIZE - shift)) | vp ;
      vp = v >> GPIO_BANK_SIZE;

      endian_le16_na_store(data, endian_le16((uint16_t)v));
      data += 2;
    }

  endian_le16_na_store(data, endian_le16((uint16_t)vp));

  LOCK_RELEASE_IRQ(&dev->lock);

  return 0;
}

static DEV_GPIO_REQUEST(efm32_gpio_request)
{
#ifdef CONFIG_DRIVER_EFM32_GPIO_UNTIL
  struct device_s *dev = gpio->dev;
  if (rq->type == DEV_GPIO_UNTIL)
    return efm32_gpio_request_until(dev, dev->drv_pv, rq);
#endif

  dev_gpio_request_async_to_sync(gpio, rq);
}

static DEV_IOMUX_SETUP(efm32_gpio_iomux_setup)
{
  struct device_s *dev = accessor->dev;

  if (io_id >= GPIO_BANK_SIZE * GPIO_BANK_COUNT)
    return -ERANGE;

  LOCK_SPIN_IRQ(&dev->lock);
  efm32_gpio_mode(io_id, io_id, dev_gpio_mask1, dir);
  LOCK_RELEASE_IRQ(&dev->lock);

  return 0;
}

static DEV_IRQ_SINK_UPDATE(efm32_gpio_icu_sink_update)
{
  struct device_s *dev = sink->base.dev;
  struct efm32_gpio_private_s *pv = dev->drv_pv;
  uint_fast8_t sink_id = sink - pv->sink;
  uint32_t mask = bit(sink_id);

  /* Select polarity of interrupt edge */
  uint32_t e, d;

  switch (sense)
    {
    case DEV_IRQ_SENSE_NONE: {
      /* Disable external interrupt */
      uint32_t x = endian_le32(cpu_mem_read_32(EFM32_GPIO_ADDR + EFM32_GPIO_IEN_ADDR));
      x &= ~mask;
      cpu_mem_write_32(EFM32_GPIO_ADDR + EFM32_GPIO_IEN_ADDR, endian_le32(x));
      return;
    }

    case DEV_IRQ_SENSE_FALLING_EDGE:
      e = 0;
      d = 0xffffffff;
      break;
    case DEV_IRQ_SENSE_RISING_EDGE:
      e = 0xffffffff;
      d = 0;
      break;
    case DEV_IRQ_SENSE_ANY_EDGE:
      d = e = 0xffffffff;
      break;

    default:
      return;
    }

  /* Set polarity */
  uint32_t x = endian_le32(cpu_mem_read_32(EFM32_GPIO_ADDR + EFM32_GPIO_EXTIRISE_ADDR));
  x = (mask & e) | (~mask & x);
  cpu_mem_write_32(EFM32_GPIO_ADDR + EFM32_GPIO_EXTIRISE_ADDR, endian_le32(x));

  x = endian_le32(cpu_mem_read_32(EFM32_GPIO_ADDR + EFM32_GPIO_EXTIFALL_ADDR));
  x = (mask & d) | (~mask & x);
  cpu_mem_write_32(EFM32_GPIO_ADDR + EFM32_GPIO_EXTIFALL_ADDR, endian_le32(x));

  /* Enable interrupt */
  x = endian_le32(cpu_mem_read_32(EFM32_GPIO_ADDR + EFM32_GPIO_IEN_ADDR));
  x |= mask;
  cpu_mem_write_32(EFM32_GPIO_ADDR + EFM32_GPIO_IEN_ADDR, endian_le32(x));
}

static DEV_ICU_GET_SINK(efm32_gpio_icu_get_sink)
{
  struct device_s *dev = accessor->dev;
  struct efm32_gpio_private_s *pv = dev->drv_pv;
  uint8_t pin = id % GPIO_BANK_SIZE;
  uint_fast8_t bank = id / GPIO_BANK_SIZE;

  if (pin >= CONFIG_DRIVER_EFM32_GPIO_IRQ_COUNT || bank >= GPIO_BANK_COUNT)
    return NULL;

  uint_fast8_t i = 0;
  uint_fast8_t grpx = pin & ~(GPIO_PINIDX_COUNT - 1); /* grpx = grp * GPIO_PINIDX_COUNT */
  uint_fast8_t idx  = pin &  (GPIO_PINIDX_COUNT - 1);
  uint8_t icupv = efm32_gpio_icupv(bank, idx);

  /* Find a external interrupt (sink endpoint) which can be associated
     to the selected pin. */
  for (i = 0; i < GPIO_BANK_SIZE / GPIO_PINGRP_COUNT; i++)
    {
      uint_fast8_t sink_id = grpx + i;
      struct dev_irq_sink_s *sink = pv->sink + sink_id;

      if (sink->base.link_count == 0)
        {
#ifdef CONFIG_DRIVER_EFM32_GPIO_UNTIL
          uint16_t mask = 1 << sink_id;
          if (endian_le32(cpu_mem_read_32(EFM32_GPIO_ADDR + EFM32_GPIO_IEN_ADDR)) & mask)
            continue;
#endif
          sink->icu_pv = icupv;
          return sink;
        }

      /* Already linked with the same configuration */
      if (sink->icu_pv == icupv)
        return sink;
    }

  return NULL;
}

static DEV_IRQ_SRC_PROCESS(efm32_gpio_source_process)
{
  struct device_s *dev = ep->base.dev;
  struct efm32_gpio_private_s *pv = dev->drv_pv;

  lock_spin(&dev->lock);

  while (1)
    {
      uint32_t x = endian_le32(cpu_mem_read_32(EFM32_GPIO_ADDR + EFM32_GPIO_IF_ADDR));

      if (!x)
        break;

#ifdef CONFIG_DRIVER_EFM32_GPIO_UNTIL
      /* handle gpio DEV_GPIO_UNTIL requests */
      GCT_FOREACH(dev_request_queue, &pv->queue, rq, {
          uint16_t m = rq->drvuint;
          if (m & x)
            {
              x ^= m;
              efm32_gpio_until_clear(m);
              rq->drvuint = 0;
              rq->error = 0;
              dev_gpio_rq_remove(&pv->queue, dev_gpio_rq_s_cast(rq));
              dev_gpio_rq_done(dev_gpio_rq_s_cast(rq));
            }
      });
#endif

      cpu_mem_write_32(EFM32_GPIO_ADDR + EFM32_GPIO_IFC_ADDR, endian_le32(x));

#ifdef CONFIG_DRIVER_EFM32_GPIO_ICU
      x &= bit_mask(0, CONFIG_DRIVER_EFM32_GPIO_IRQ_COUNT);
      while (x)
        {
          uint_fast8_t i = bit_ctz(x);
          struct dev_irq_sink_s *sink = pv->sink + i;

# ifdef CONFIG_DRIVER_EFM32_GPIO_UNTIL
          if (sink->base.link_count != 0)
# endif
            {
              uint_fast8_t bank = efm32_gpio_icupv_bank(sink);
              uint8_t idx = (i & ~(GPIO_PINIDX_COUNT - 1)) + efm32_gpio_icupv_idx(sink);
              int_fast16_t id = (cpu_mem_read_32(EFM32_GPIO_ADDR + EFM32_GPIO_DIN_ADDR(bank)) >> idx) & 1;
              device_irq_sink_process(sink, id);
            }

          x ^= bit(i);
        }
#endif
    }

  lock_release(&dev->lock);
}

static DEV_INIT(efm32_gpio_init)
{
  struct efm32_gpio_private_s *pv;


  pv = mem_alloc(sizeof (*pv), (mem_scope_sys));

  if (!pv)
    return -ENOMEM;
  memset(pv, 0, sizeof(*pv));

  dev->drv_pv = pv;

  __unused__ uintptr_t addr = 0;
  assert(device_res_get_uint(dev, DEV_RES_MEM, 0, &addr, NULL) == 0 &&
         EFM32_GPIO_ADDR == addr);

  if (dev_drv_clock_init(dev, &pv->clk_ep, 0, DEV_CLOCK_EP_POWER_CLOCK | DEV_CLOCK_EP_GATING_SYNC, NULL)) {
    logk_fatal("Bad clock init");
    goto err_mem;
  }

  cpu_mem_write_32(EFM32_GPIO_ADDR + EFM32_GPIO_IEN_ADDR, 0);
  cpu_mem_write_32(EFM32_GPIO_ADDR + EFM32_GPIO_IFC_ADDR, 0xffffffff);

#ifdef CONFIG_DRIVER_EFM32_GPIO_UNTIL
  dev_rq_queue_init(&pv->queue);
#endif

#ifdef CONFIG_DEVICE_IRQ
  device_irq_source_init(dev, pv->src, GPIO_SRC_IRQ_COUNT,
                    &efm32_gpio_source_process);

  if (device_irq_source_link(dev, pv->src, GPIO_SRC_IRQ_COUNT, -1)) {
    logk_fatal("Bad IRQ init");
    goto err_clk;
  }
#endif

#ifdef CONFIG_DRIVER_EFM32_GPIO_ICU
  device_irq_sink_init(dev, pv->sink, CONFIG_DRIVER_EFM32_GPIO_IRQ_COUNT,
                       &efm32_gpio_icu_sink_update,
                       DEV_IRQ_SENSE_FALLING_EDGE | DEV_IRQ_SENSE_RISING_EDGE |
                       DEV_IRQ_SENSE_ANY_EDGE);
#endif

#if CONFIG_DRIVER_EFM32_GPIO_DRIVE_STRENGH > 0
  uint_fast8_t i;
  for (i = 0; i < 6; i++)
    cpu_mem_write_32(EFM32_GPIO_ADDR + EFM32_GPIO_CTRL_ADDR(i),
                     ((CONFIG_DRIVER_EFM32_GPIO_DRIVE_STRENGH) >> (i * 2)) & 0x3);
#endif

  return 0;

#if 0
 err_unlink:
  device_irq_source_unlink(dev, pv->src, GPIO_SRC_IRQ_COUNT);
#endif
 err_clk:
  dev_drv_clock_cleanup(dev, &pv->clk_ep);
 err_mem:
  mem_free(pv);
  return -1;
}

static DEV_CLEANUP(efm32_gpio_cleanup)
{
  struct efm32_gpio_private_s  *pv = dev->drv_pv;

#ifdef CONFIG_DRIVER_EFM32_GPIO_ICU
  cpu_mem_write_32(EFM32_GPIO_ADDR + EFM32_GPIO_IEN_ADDR, 0);

  device_irq_source_unlink(dev, pv->src, GPIO_SRC_IRQ_COUNT);
#endif

  dev_drv_clock_cleanup(dev, &pv->clk_ep);

#ifdef CONFIG_DRIVER_EFM32_GPIO_UNTIL
  dev_rq_queue_destroy(&pv->queue);
#endif

  mem_free(pv);

  return 0;
}
